I FIXED THE GRAPHIC BLEED!!!!!!!!!!

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,10 +26,10 @@
 
 @keyframes slideRight {
     from {
-      transform: translateX(-100vw);
+      margin-left:-100vw;
     }
     to {
-      transform: translateX(0);
+      margin-left: 0vw;
     }
   }
 
@@ -124,6 +124,7 @@ footer{
     height: 75vh;
     width: 100vw;
     position: relative;
+    overflow-x: hidden;
 }
 
 .title-wrapper{
@@ -479,7 +480,7 @@ a{
 }
 
 .hidden-content{
-
+    display: none;
 }
 
 .under-construction{
@@ -540,10 +541,10 @@ video{
     
     @keyframes slideRight0-420 {
         from {
-            transform: translateX(-300vw);
+            margin-left:-100vw;
         }
         to {
-            transform: translateX(0);
+            margin-left: 0vw;
         }
     }
     
@@ -751,10 +752,10 @@ video{
     
     @keyframes slideRight420-553 {
         from {
-            transform: translateX(-300vw);
+            margin-left:-100vw;
         }
         to {
-            transform: translateX(0);
+            margin-left: 0vw;
         }
     }
     
@@ -941,10 +942,10 @@ video{
     
     @keyframes slideRight553-769 {
         from {
-            transform: translateX(-150vw);
+            margin-left:-150vw;
         }
         to {
-            transform: translateX(0);
+            margin-left: 0vw;
         }
     }
     
@@ -1124,10 +1125,10 @@ video{
     
     @keyframes slideRight769-1023 {
         from {
-            transform: translateX(-150vw);
+            margin-left:-150vw;
         }
         to {
-            transform: translateX(0);
+            margin-left: 0vw;
         }
     }
     
